<resources>
    <string name="app_name">知乎日报</string>
    <string name="splash">知乎日报</string>
    <string name="splash_sub_title">每天三次，每次七分钟</string>
    <string name="action_light_mode">日间模式</string>
    <string name="action_settings">设置</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="comment">%1$s 条点评</string>
    <string name="home">首页</string>
    <string name="home_today">今日热闻</string>
    <string name="settings">设置</string>
    <string name="date_font_family">sans-serif-light</string>
    <string name="to_do">TODO....暂时还没有实现此功能</string>
    <string name="theme_api_not_supported">TODO....Theme API被移除，暂时没有这个功能</string>
    <string name="login_not_implement">TODO....登录同步功能未实现</string>
    <string name="offline_download_prompt">离线功能只同步下载最近两天的日报</string>
    <string name="action_comment_compose">写点评</string>
    <string name="app_version_latest">已是最新版本</string>
    <string name="app_version_summary">版本：%1$s</string>
    <string name="comment_expand">展开</string>
    <string name="long_comments">%1$s 条长评</string>
    <string name="no_comments">深度长评虚位以待</string>
    <string name="short_comments">%1$s 条短评</string>
    <string name="favorite">我的收藏</string>
    <string name="offline">离线下载</string>
    <string name="user_default_name">请登录</string>
    <string name="pref_category_key_general">pref_category_key_general</string>
    <string name="pref_category_key_other">pref_category_key_other</string>
    <string name="pref_category_key_feedback">pref_category_key_feedback</string>
    <string name="pref_key_version_check">pref_key_version_check</string>
    <string name="pref_key_auto_offline">pref_key_auto_offline</string>
    <string name="pref_key_big_font_mode">pref_key_big_font_mode</string>
    <string name="pref_key_clear_cache">pref_key_clear_cache</string>
    <string name="pref_key_comment_share">pref_key_comment_share</string>
    <string name="pref_key_feedback">pref_key_feedback</string>
    <string name="pref_key_no_image_mode">pref_key_no_image_mode</string>
    <string name="pref_key_push">pref_key_push</string>
    <string name="pref_version_check">检查更新</string>
    <string name="pref_auto_offline">自动离线下载</string>
    <string name="pref_auto_offline_prompt">仅 Wi-Fi 下可用，自动下载最新内容</string>
    <string name="pref_bit_font_mode">大字号</string>
    <string name="pref_clear_cache">清除缓存</string>
    <string name="offline_download_complete">离线下载完成</string>
    <string name="clear_cache_success">缓存已清空</string>
    <string name="clear_cache_failed">缓存清理失败</string>
    <string name="pref_category_feedback">反馈</string>
    <string name="pref_category_general">常规</string>
    <string name="pref_category_other">其它</string>
    <string name="pref_comment_share">点评分享到微博</string>
    <string name="pref_feedback">意见反馈</string>
    <string name="pref_no_image_mode">无图模式</string>
    <string name="pref_no_image_mode_prompt">移动网络不下载图片</string>
    <string name="pref_push">推送消息</string>
    <string name="share_url_not_found">无法获得分享链接</string>
    <string name="share">分享</string>
</resources>
