<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/drawer_nav_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/drawer_header_height"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:background="?attr/drawerBackgroundPrimary">

    <RelativeLayout
        android:id="@id/drawer_nav_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/drawer_header_margin_top"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@id/drawer_nav_user_avatar"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="13dp"
            android:src="@drawable/menu_avatar" />

        <TextView
            android:id="@id/drawer_nav_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/drawer_nav_user_avatar"
            android:layout_centerVertical="true"
            android:maxWidth="96dp"
            android:textAppearance="@style/TextAppearance.Drawer.Header"
            android:ellipsize="end"
            android:text="@string/user_default_name"
            android:maxLines="2"
            android:singleLine="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="26dp">

        <LinearLayout
            android:id="@id/drawer_nav_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/favorites" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textAppearance="@style/TextAppearance.Drawer.Header"
                android:text="@string/favorite" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/drawer_nav_offline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@id/drawer_nav_offline_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/download" />

            <TextView
                android:id="@id/drawer_nav_offline_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textAppearance="@style/TextAppearance.Drawer.Header"
                android:text="@string/offline" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>